--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </nav>
   </header>
 
-  <main class="container">
+  <main class="container app">
     <!-- TODAY / QUICK LOG -->
     <section class="card view" id="view-today">
       <h2>Heute</h2>
