--- a/index.html
+++ b/index.html
@@ -23,26 +23,27 @@
       <button class="btn" data-view="stats">Statistiken</button>
       <button class="btn" data-view="settings">Einstellungen</button>
     </nav>
-    <nav class="iconNav" aria-label="Navigation (mobil)">
-      <button class="iconTab" data-view="today" type="button">
-        <img src="Home.png" alt="" aria-hidden="true" />
-        <span>Heute</span>
+
+    <nav class="navIcons" aria-label="Navigation (mobil)">
+      <button class="tab" data-view="today" type="button">
+        <img class="tabIcon" src="Home.png" alt="" aria-hidden="true" />
+        <div class="tabLabel">Heute</div>
       </button>
-      <button class="iconTab" data-view="calendar" type="button">
-        <img src="Kalender.png" alt="" aria-hidden="true" />
-        <span>Kal.</span>
+      <button class="tab" data-view="calendar" type="button">
+        <img class="tabIcon" src="Kalender.png" alt="" aria-hidden="true" />
+        <div class="tabLabel">Kal.</div>
       </button>
-      <button class="iconTab" data-view="hormones" type="button">
-        <img src="Kurve.png" alt="" aria-hidden="true" />
-        <span>Kurve</span>
+      <button class="tab" data-view="hormones" type="button">
+        <img class="tabIcon" src="Kurve.png" alt="" aria-hidden="true" />
+        <div class="tabLabel">Kurve</div>
       </button>
-      <button class="iconTab" data-view="stats" type="button">
-        <img src="Stats.png" alt="" aria-hidden="true" />
-        <span>Stats</span>
+      <button class="tab" data-view="stats" type="button">
+        <img class="tabIcon" src="Stats.png" alt="" aria-hidden="true" />
+        <div class="tabLabel">Stats</div>
       </button>
-      <button class="iconTab" data-view="settings" type="button">
-        <img src="Einst.png" alt="" aria-hidden="true" />
-        <span>Einst.</span>
+      <button class="tab" data-view="settings" type="button">
+        <img class="tabIcon" src="Einst.png" alt="" aria-hidden="true" />
+        <div class="tabLabel">Einst.</div>
       </button>
     </nav>
 
