--- a/index.html
+++ b/index.html
@@ -23,6 +23,29 @@
       <button class="btn" data-view="stats">Statistiken</button>
       <button class="btn" data-view="settings">Einstellungen</button>
     </nav>
+    <nav class="iconNav" aria-label="Navigation (mobil)">
+      <button class="iconTab" data-view="today" type="button">
+        <img src="Home.png" alt="" aria-hidden="true" />
+        <span>Heute</span>
+      </button>
+      <button class="iconTab" data-view="calendar" type="button">
+        <img src="Kalender.png" alt="" aria-hidden="true" />
+        <span>Kal.</span>
+      </button>
+      <button class="iconTab" data-view="hormones" type="button">
+        <img src="Kurve.png" alt="" aria-hidden="true" />
+        <span>Kurve</span>
+      </button>
+      <button class="iconTab" data-view="stats" type="button">
+        <img src="Stats.png" alt="" aria-hidden="true" />
+        <span>Stats</span>
+      </button>
+      <button class="iconTab" data-view="settings" type="button">
+        <img src="Einst.png" alt="" aria-hidden="true" />
+        <span>Einst.</span>
+      </button>
+    </nav>
+
   </header>
 
   <main class="container app">
