Update intro text for today logging section

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <!-- TODAY / QUICK LOG -->
     <section class="card view" id="view-today">
       <h2>Heute</h2>
-      <p class="muted introMuted">Schnell-Logging: „Heute Blutung“ und Notizen. Du kannst auch rückwirkend eintragen – oder direkt einen Zeitraum setzen.</p>
+      <p class="muted introMuted">Schnell-Logging: „Heute Blutung“. Du kannst auch rückwirkend eintragen – oder direkt einen Zeitraum setzen.</p>
 
       <!-- Zyklus-Timeline (Sternschnuppe) -->
       <div class="card inner cycleProgressCard hidden" id="cycleProgressCard" aria-live="polite">
