Update brand subtitle with small text formatting

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <img src="logo.png" class="logoImg" alt="Lunacy Logo" />
         <div class="brandRight">
           <img src="lunacy-wordmark.png" class="logoWordmark" alt="Lunacy" />
-          <div class="brandSubtitle">Periodentracker • lokal auf deinem Gerät</div>
+          <div class="brandSubtitle"><small>Periodentracker<!-- •--><br>lokal auf deinem Gerät</small>small></div>
         </div>
       </div>
 
