Revise text in index.html for improved clarity
Updated the introductory text for clarity and specificity.

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <!-- TODAY / QUICK LOG -->
     <section class="card view" id="view-today">
       <h2>Heute</h2>
-      <p class="muted introMuted">Schnell-Logging: „Heute Blutung“ und Notizen. Du kannst auch rückwirkend eintragen – oder direkt einen Zeitraum setzen.</p>
+      <p class="muted introMuted">Schnell-Logging: „Heute Blutung“. Du kannst auch rückwirkend eintragen – oder direkt einen Zeitraum setzen.</p>
           <div class="cycleProgressBadge" id="cycleProgressBadge">ZT –</div>
         </div>
 
@@ -102,7 +102,7 @@
         <button class="btn primary" id="bleedTodayBtn" type="button">Heute Blutung: hinzufügen</button>
 
         <div class="card inner">
-          <div class="muted">Rückwirkend (ein Tag)</div>
+          <div class="muted">Rückwirkend (ein Tag pro Eintrag)</div>
           <div class="grid2" style="margin-top:8px;">
             <input type="date" id="bleedDate" />
             <button class="btn" id="bleedAddBtn" type="button">Blutung eintragen</button>
