--- a/index.html
+++ b/index.html
@@ -8,22 +8,22 @@
 </head>
 <body>
   <header class="topbar">
-    <!-- Row 1: Branding (Logo + Wordmark) -->
+    <!-- Row 1: Branding + Desktop navigation -->
     <div class="topbarRow brandRow" aria-label="Lunacy">
       <div class="brand">
         <img src="logo.png" class="logoImg" alt="Lunacy Logo" />
         <div class="brandRight">
           <img src="lunacy-wordmark.png" class="logoWordmark" alt="Lunacy" />
-          <!--<div class="brandSubtitle"><small>Periodentracker • lokal auf deinem Gerät</small>small></div>-->
+          <!-- <div class="brandSubtitle">Periodentracker • lokal auf deinem Gerät</div>-->
         </div>
       </div>
 
-      <!-- Desktop navigation (Text-Tabs + optional icon) -->
+      <!-- Desktop navigation (Text + Icons) -->
       <nav class="nav navDesktop" aria-label="Navigation">
         <button class="btn tabBtn" data-view="today"><img class="tabIcon" src="Home.png" alt="" aria-hidden="true" />Heute</button>
         <button class="btn tabBtn" data-view="calendar"><img class="tabIcon" src="Kalender.png" alt="" aria-hidden="true" />Kalender</button>
-        <button class="btn tabBtn" data-view="hormones"><img class="tabIcon" src="Kurve.png" alt="" aria-hidden="true" />Hormonkurve</button>
-        <button class="btn tabBtn" data-view="stats"><img class="tabIcon" src="Stats.png" alt="" aria-hidden="true" />Statistiken</button>
+        <button class="btn tabBtn" data-view="hormones"><img class="tabIcon" src="Kurve.png" alt="" aria-hidden="true" />Kurve</button>
+        <button class="btn tabBtn" data-view="stats"><img class="tabIcon" src="Stats.png" alt="" aria-hidden="true" />Stats</button>
         <button class="btn tabBtn" data-view="settings"><img class="tabIcon" src="Einst.png" alt="" aria-hidden="true" />Einstellungen</button>
       </nav>
     </div>
@@ -38,11 +38,11 @@
         <img src="Kalender.png" alt="" aria-hidden="true" />
         <span>Kal.</span>
       </button>
-      <button class="mTab" type="button" data-view="hormones" aria-label="Hormonkurve">
+      <button class="mTab" type="button" data-view="hormones" aria-label="Kurve">
         <img src="Kurve.png" alt="" aria-hidden="true" />
         <span>Kurve</span>
       </button>
-      <button class="mTab" type="button" data-view="stats" aria-label="Statistiken">
+      <button class="mTab" type="button" data-view="stats" aria-label="Stats">
         <img src="Stats.png" alt="" aria-hidden="true" />
         <span>Stats</span>
       </button>
@@ -58,6 +58,15 @@
     <section class="card view" id="view-today">
       <h2>Heute</h2>
       <p class="muted introMuted">Schnell-Logging: „Heute Blutung“. Du kannst auch rückwirkend eintragen – oder direkt einen Zeitraum setzen.</p>
+
+      <!-- Zyklus-Timeline (Sternschnuppe) -->
+      <div class="card inner cycleProgressCard hidden" id="cycleProgressCard" aria-live="polite">
+        <div class="cycleProgressTop">
+          <div style="flex:1;min-width:0;">
+            <div class="muted" id="cycleProgressKicker">Zyklus</div>
+            <div class="strong" id="cycleProgressHeadline">–</div>
+            <div class="muted" style="font-size:12px;margin-top:4px;" id="cycleProgressSub">–</div>
+          </div>
           <div class="cycleProgressBadge" id="cycleProgressBadge">ZT –</div>
         </div>
 
@@ -102,7 +111,7 @@
         <button class="btn primary" id="bleedTodayBtn" type="button">Heute Blutung: hinzufügen</button>
 
         <div class="card inner">
-          <div class="muted">Rückwirkend (ein Tag pro Eintrag)</div>
+          <div class="muted">Rückwirkend (ein Tag)</div>
           <div class="grid2" style="margin-top:8px;">
             <input type="date" id="bleedDate" />
             <button class="btn" id="bleedAddBtn" type="button">Blutung eintragen</button>
@@ -111,17 +120,6 @@
             Tipp: Wenn du z. B. am 18. und 21. einträgst, werden fehlende Tage dazwischen automatisch ergänzt.
           </div>
         </div>
-      
-
-      <!-- Zyklus-Timeline (Sternschnuppe) -->
-      <div class="card inner cycleProgressCard hidden" id="cycleProgressCard" aria-live="polite">
-        <div class="cycleProgressTop">
-          <div style="flex:1;min-width:0;">
-            <div class="muted" id="cycleProgressKicker">Zyklus</div>
-            <div class="strong" id="cycleProgressHeadline">–</div>
-            <div class="muted" style="font-size:12px;margin-top:4px;" id="cycleProgressSub">–</div>
-          </div>
-
       </div>
 
       <div class="split" style="margin-top:12px;">
