Add footer brand logo to index.html

--- a/index.html
+++ b/index.html
@@ -435,6 +435,10 @@
     </section>
   </main>
 
+<div class="footerBrand">
+  <img src="logo.png" alt="Lunacy Logo" class="footerLogo">
+</div>
+	
   <footer class="footer">
     <small class="muted">Datenschutz: Daten bleiben auf deinem Gerät. Keine Cloud, kein Account.</small>
   </footer>
