--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Lunacy</title>
   <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="today-bg.css">
 </head>
 <body>
   <header class="topbar">
