--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <p class="muted introMuted">Schnell-Logging: „Heute Blutung“. Du kannst auch rückwirkend eintragen – oder direkt einen Zeitraum setzen.</p>
 
       <!-- Zyklus-Timeline (Sternschnuppe) -->
-      <div class="card inner cycleProgressCard hidden" id="cycleProgressCard" aria-live="polite">
+      <div class="card cycleProgressCard has-bg hidden" id="cycleProgressCard" aria-live="polite">
         <div class="cycleProgressTop">
           <div style="flex:1;min-width:0;">
             <div class="muted" id="cycleProgressKicker">Zyklus</div>
