--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <button class="btn primary" id="bleedTodayBtn" type="button">Heute Blutung: hinzufügen</button>
 
         <div class="card inner">
-          <div class="muted">Rückwirkend (ein Tag)</div>
+          <div class="muted">Rückwirkend <small>(ein Tag pro Eintrag)</small></div>
           <div class="grid2" style="margin-top:8px;">
             <input type="date" id="bleedDate" />
             <button class="btn" id="bleedAddBtn" type="button">Blutung eintragen</button>
