--- a/index.html
+++ b/index.html
@@ -445,6 +445,11 @@
 	
   <footer class="footer">
     <small class="muted">Datenschutz: Daten bleiben auf deinem Gerät. Keine Cloud, kein Account.</small>
+	  <div class="footerLinks">
+  <a href="impressum.html">Impressum</a>
+  <span>•</span>
+  <a href="datenschutz.html">Datenschutz</a>
+</div>
   </footer>
 
   <!-- Notes Modal -->
