--- a/impressum.html
+++ b/impressum.html
@@ -8,7 +8,7 @@
 <body>
   <main class="container card">
     <h2>Impressum</h2>
-
+<button class="btn backBtn" onclick="history.back()">← Zurück</button>
     <p><strong>Projekt:</strong> Lunacy</p>
 
     <p>
