--- a/datenschutz.html
+++ b/datenschutz.html
@@ -8,7 +8,7 @@
 <body>
   <main class="container card">
     <h2>Datenschutzerklärung</h2>
-
+<button class="btn backBtn" onclick="history.back()">← Zurück</button>
     <p>
       Diese Webanwendung verarbeitet alle Daten ausschließlich lokal im Browser.
     </p>
