--- a/impressum.html
+++ b/impressum.html
@@ -42,8 +42,8 @@
 
 <script>
   (function(){
-    const user = "lunacy.app";
-    const domain = "proton.me";
+    const user = "winter.maedchen";
+    const domain = "web.de";
     const addr = user + "@" + domain;
 
     const btn = document.getElementById("mailBtn");
