--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
       <h2>Statistiken</h2>
       <div id="statsSummary"></div>
 
-      
+      <div id="statsMittelschmerz"></div>
 
       <h3 style="margin-top:14px;">Visualisierungen</h3>
       <div id="statsCharts"></div>
