--- a/index.html
+++ b/index.html
@@ -536,5 +536,6 @@
   <script src="warnings.js"></script>
   <script src="tips.js"></script>
   <script src="cycleProgress.js"></script>
+  <script src="tww.js"></script>
 </body>
 </html>
