--- a/index.html
+++ b/index.html
@@ -528,6 +528,7 @@
   <script src="utils.js"></script>
   <script src="astro.js"></script>
   <script src="backup.js"></script>
+  <script src="meds.js"></script>
   <script src="app.js"></script>
   <script src="tarot.js"></script>
   <script src="stats_charts.js"></script>
@@ -536,5 +537,7 @@
   <script src="warnings.js"></script>
   <script src="tips.js"></script>
   <script src="cycleProgress.js"></script>
+  <script src="tww.js"></script>
+  
 </body>
 </html>
